fix deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,5 @@ jobs:
         env:
           REPO: self
           BRANCH: deployment
-          FOLDER: result
+          FOLDER: result/web
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
