update deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,11 +25,10 @@ jobs:
       - run: cp -rL result/web web
       - uses: s0/git-publish-subdir-action@v2.6.0
         env:
-          BRANCH: web-app
+          BRANCH: build/web-app
           COMMIT_EMAIL: "41898282+github-actions[bot]@users.noreply.github.com"
           COMMIT_NAME: "github-actions[bot]"
           FOLDER: web
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO: self
           SQUASH_HISTORY: true
-          TARGET_DIR: web
