--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - run: nix build .#web
       - run: cp -rL result/web www
       - run: ls -A | grep -v www | xargs rm -r
-      - uses: s0/git-publish-subdir-action@v2.6.0
+      - uses: kayhhh/git-publish-subdir-action@develop
         env:
           BRANCH: build/web-app
           COMMIT_EMAIL: "41898282+github-actions[bot]@users.noreply.github.com"
