--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - run: nix build .#web
       - run: cp -rL result/web www
-      - uses: kayhhh/git-publish-subdir-action@develop
+      - uses: s0/git-publish-subdir-action@develop
         env:
           BRANCH: build/web-app
           COMMIT_EMAIL: "41898282+github-actions[bot]@users.noreply.github.com"
@@ -31,3 +31,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO: self
           SQUASH_HISTORY: true
+          TARGET_DIR: www
