--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -16,6 +16,7 @@ bevy.workspace = true
 bevy-async-task = "1.3.0"
 bevy_rapier3d = { version = "0.23.0", features = ["simd-stable"] }
 bevy_vrm = "0.0.6"
+did-method-key = "0.2.2"
 didkit = { version = "0.6.0", default-features = false, features = ["w3c", "ed25519", "ripemd-160", "http-did"] }
 tracing = "0.1.40"
 # unavi-system-bindgen = { path = "../../wasm/unavi-system/bindgen" }
