--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
-      - run: trunk build
+      - run: nix develop -c trunk build
       - run: mv ./crates/unavi-app/dist/* www
       - uses: s0/git-publish-subdir-action@develop
         env:
