--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,42 +5,6 @@ on:
   pull_request:
 
 jobs:
-  build-wasm:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: "true"
-          ref: ${{ github.event.pull_request.head.ref }}
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-      - uses: Swatinem/rust-cache@v2
-      - run: nix develop -c sh scripts/build-wasm.sh
-      - uses: EndBug/add-and-commit@v9
-        with:
-          message: "chore: build wasm libs"
-          default_author: github_actions
-
-  check:
-    needs: build-wasm
-    runs-on: ubuntu-latest
-    steps:
-      - uses: AdityaGarg8/remove-unwanted-software@v2
-        with:
-          remove-android: "true"
-          remove-dotnet: "true"
-          remove-haskell: "true"
-      - uses: actions/checkout@v4
-        with:
-          submodules: "true"
-          ref: ${{ github.event.pull_request.head.ref }}
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-      - uses: Swatinem/rust-cache@v2
-      - run: nix flake check --all-systems
-      - run: nix develop -c cargo doc --workspace --all-features --no-deps --document-private-items --features bevy/dynamic_linking
-      - run: nix develop -c cargo test --workspace --all-features --features bevy/dynamic_linking
-
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -74,3 +38,39 @@ jobs:
         with:
           message: "chore: format"
           default_author: github_actions
+
+  build-wasm:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: "true"
+          ref: ${{ github.event.pull_request.head.ref }}
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: Swatinem/rust-cache@v2
+      - run: nix develop -c sh scripts/build-wasm.sh
+      - uses: EndBug/add-and-commit@v9
+        with:
+          message: "chore: build wasm libs"
+          default_author: github_actions
+
+  check:
+    needs:
+      - build-wasm
+      - lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: AdityaGarg8/remove-unwanted-software@v2
+        with:
+          remove-android: "true"
+          remove-dotnet: "true"
+          remove-haskell: "true"
+      - uses: actions/checkout@v4
+        with:
+          submodules: "true"
+          ref: ${{ github.event.pull_request.head.ref }}
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: Swatinem/rust-cache@v2
+      - run: nix flake check --all-systems
