--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -4,7 +4,46 @@ on:
   workflow_dispatch:
 
 jobs:
-  pr:
+  release-app:
+    name: release ${{ matrix.target }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        target: [windows, linux]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: Swatinem/rust-cache@v2
+      - run: nix build .#${{ matrix.target }}-app
+      - run: zip -r app-${{ matrix.target }}.zip result/bin
+
+  release-server:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: Swatinem/rust-cache@v2
+      - run: nix build .#linux-server
+      - run: zip -r server-linux.zip result/bin
+
+  release-web:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: Swatinem/rust-cache@v2
+      - run: nix build .#web
+      - run: zip -r web.zip result
+
+  create-pr:
+    needs:
+      - release-app
+      - release-server
+      - release-web
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
