add back wasm crates to workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 resolver = "2"
 members = [
   "crates/*",
-  # "wasm/*",
-  # "wasm/*/bindgen"
+  "wasm/*",
+  "wasm/*/bindgen"
 ]
 
 [workspace.package]
