--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,10 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
-      - run: nix develop -c sh scripts/build-wasm.sh
+      - run: nix develop -c cargo component build
       - uses: EndBug/add-and-commit@v9
         with:
-          message: "chore: build wasm libs"
+          message: "chore: build wasm"
           default_author: github_actions
 
   lint:
