--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
+      - run: git pull
       - run: nix develop -c cargo clippy --fix --no-deps
       - run: nix develop -c cargo fmt --all
       - run: nix develop -c prettier -w .
@@ -60,4 +61,5 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
+      - run: git pull
       - run: nix flake check ".?submodules=1" --all-systems
