--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -3,6 +3,10 @@ name: "Release (stable)"
 on:
   workflow_dispatch:
 
+concurrency:
+  group: "release-stable"
+  cancel-in-progress: false
+
 jobs:
   release-app:
     name: release-app-${{ matrix.target }}
