--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -16,7 +16,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
-      - run: |
+      - id: set-matrix
+        run: |
           set -Eeu
           matrix="$(nix eval --json '.#githubActions.matrix')"
           echo "matrix=$matrix" >> "$GITHUB_OUTPUT"
@@ -26,7 +27,7 @@ jobs:
       - nix-matrix
     strategy:
       fail-fast: false
-      matrix: ${{fromJSON(needs.nix-matrix.outputs.matrix)}}
+      matrix: ${{ fromJSON(needs.nix-matrix.outputs.matrix) }}
     name: release-app-${{ matrix.attr }}
     runs-on: ${{ matrix.os }}
     steps:
