--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,4 +52,7 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
-      - run: nix flake check .?submodules=1 --all-systems
+      # Not working in CI... but works on my machine.
+      # - run: nix flake check .?submodules=1 --all-systems
+      - run: nix develop -c cargo doc --workspace --all-features --no-deps
+      - run: nix develop -c cargo test --workspace --all-features
