--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -64,11 +64,18 @@ jobs:
           version-file: "Cargo.toml"
           version-regex: '^version = "(.*)"'
 
-      - uses: EndBug/add-and-commit@v9
-        with:
-          message: "chore: bump ${{ steps.semver.outputs.version }}"
-          default_author: github_actions
-          tag: v${{ steps.semver.outputs.version }}
+      - run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+          git add -A
+          git commit -m "chore: bump ${{ steps.semver.outputs.version }}"
+          git tag v${{ steps.semver.outputs.version }}
+          git push --tags
+
+          git checkout beta
+          git merge main
+          git push
 
       - uses: actions/create-release@v1
         with:
